fix(create): sync identity for existing games
